# ghostjobdetector

./: .gitignore  LICENSE  README.md
backend/: greenhouse_sample_list.txt  info.txt  main.py  package-lock.json  pyproject.toml  requirements.txt  sample.txt  serverless.yml
backend/core/: __init__.py  db.py  logging.py
backend/core/constants/: __init__.py  ats_patterns.py
backend/core/search/: __init__.py  careers_finder.py
backend/data_services/: __init__.py  ats_details.py  companies.py  jobs.py
backend/ghost_job_detector_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/services/applicant_ratio/: __init__.py  applicant_ratio.py
backend/services/ats/: __init__.py  ats_info.json  base.py  greenhouse.py  greenhouse_sample_list.txt  registry.py  smartrecruiter_sample_job.txt  smartrecruiter_sample_list.txt  smartrecruiters.py  verifier.py
backend/services/community/: __init__.py  community_submission.py
backend/services/description/: __init__.py  description_analyzer.py  description_dictionary.py
backend/services/job_recency/: __init__.py  job_freshness.py
backend/services/job_uniqueness/: __init__.py  job_unique.py
backend/utils/: __init__.py  matchscoring.py
docs/ai-dev/: README.md
extension/: README.md  build.js  package.json
extension/src/background/: background.js
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: community-reports.tsx  factor-breakdown.tsx  insights-panel.tsx  job-analyzer-form.tsx  score-ring.tsx
(+3 files in other folders)
